[ADD] Script para construir HTML  a partir de objetos.

--- a/index.html
+++ b/index.html
@@ -12,283 +12,11 @@
     <main id="main">
       <section class="semana">
         <h2>SEMANA 1</h2>
-        <section class="semana_1">
-          <section class="dia">
-            <h4>L</h4>
-            <div data-hora="6:30 - 8:20am" data-profesor="Hammes." data-salon="207" class="materia ciencias_naturales">
-              <h5>Ciencias Naturales</h5>
-              <span class="hora">6:30 - 8:20am</span>
-            </div>
-            <div data-hora="8:20 - 10:10am" data-profesor="Jhon Fredy." data-salon="119" class="materia informatica">
-              <h5>Informática</h5>
-              <span class="hora">8:20 - 10:10am</span>
-            </div>
-            <div data-hora="10:10 - 10:40am" class="descanso">
-              <h5>Descanso</h5>
-              <span class="hora">10:10 - 10:40am</span>
-            </div>
-            <div data-hora="10:40am - 12:10pm" data-profesor="Donaldo F." data-salon="203" class="materia matematicas">
-              <h5>Matemáticas</h5>
-              <span class="hora">10:40am - 12:10pm</span>
-            </div>
-            <div data-hora="12:10 - 12:40pm" class="descanso">
-              <h5>Descanso</h5>
-              <span class="hora">12:10 - 12:40pm</span>
-            </div>
-            <div data-hora="12:40 - 2:20pm" data-profesor="John Jairo." data-salon="205" class="materia logica_matematica">
-              <h5>Lógica Matemática</h5>
-              <span class="hora">12:40 - 2:20pm</span>
-            </div>
-          </section>
-          <section class="dia">
-            <h4>M</h4>
-            <div data-hora="6:30 - 8:20am" data-profesor="Yadira S." data-salon="114" class="materia laboratorio_lector">
-              <h5>Laboratorio Lector</h5>
-              <span class="hora">6:30 - 8:20am</span>
-            </div>
-            <div data-hora="8:20 - 10:10am" data-profesor="Alix M." data-salon="Laboratorio de Física" class="materia fisica">
-              <h5>Física</h5>
-              <span class="hora">8:20 - 10:10am</span>
-            </div>
-            <div data-hora="10:10 - 10:40am" class="descanso">
-              <h5>Descanso</h5>
-              <span class="hora">10:10 - 10:40am</span>
-            </div>
-            <div data-hora="10:40am - 12:10pm" data-profesor="Donaldo F." data-salon="203" class="materia matematicas">
-              <h5>Matemáticas</h5>
-              <span class="hora">10:40am - 12:10pm</span>
-            </div>
-            <div data-hora="12:10 - 12:40pm" class="descanso">
-              <h5>Descanso</h5>
-              <span class="hora">12:10 - 12:40pm</span>
-            </div>
-            <div data-hora="12:40 - 2:20pm" data-profesor="Stefany." data-salon="202" class="materia ingles">
-              <h5>Inglés</h5>
-              <span class="hora">12:40 - 2:20pm</span>
-            </div>
-          </section>
-          <section class="dia">
-            <h4>M</h4>
-            <div data-hora="6:30 - 8:20am" data-profesor="Sandra Ch." data-salon="201" class="materia sociales">
-              <h5>Sociales</h5>
-              <span class="hora">6:30 - 8:20am</span>
-            </div>
-            <div data-hora="8:20 - 10:10am" data-profesor="Andres G." data-salon="108" class="materia artes">
-              <h5>Artes</h5>
-              <span class="hora">8:20 - 10:10am</span>
-            </div>
-            <div data-hora="10:10 - 10:40am" class="descanso">
-              <h5>Descanso</h5>
-              <span class="hora">10:10 - 10:40am</span>
-            </div>
-            <div data-hora="10:40am - 12:10pm" data-profesor="Emilce M." data-salon="99" class="materia ingles_tecnico">
-              <h5>Inglés Técnico</h5>
-              <span class="hora">10:40am - 12:10pm</span>
-            </div>
-            <div data-hora="12:10 - 12:40pm" class="descanso">
-              <h5>Descanso</h5>
-              <span class="hora">12:10 - 12:40pm</span>
-            </div>
-            <div data-hora="12:40 - 2:20pm" data-profesor="Nelson R." data-salon="207" class="materia geometria">
-              <h5>Geometría</h5>
-              <span class="hora">12:40 - 2:20pm</span>
-            </div>
-          </section>
-          <section class="dia">
-            <h4>J</h4>
-            <div data-hora="6:30 - 8:20am" data-profesor="Sandra Ch." data-salon="201" class="materia sociales">
-              <h5>Sociales</h5>
-              <span class="hora">6:30 - 8:20am</span>
-            </div>
-            <div data-hora="8:20 - 10:10am" data-profesor="Hammes." data-salon="209" class="materia ciencias_naturales">
-              <h5>Ciencias Naturales</h5>
-              <span class="hora">8:20 - 10:10am</span>
-            </div>
-            <div data-hora="10:10 - 10:40am" class="descanso">
-              <h5>Descanso</h5>
-              <span class="hora">10:10 - 10:40am</span>
-            </div>
-            <div data-hora="10:40am - 12:10pm" data-profesor="Jhon Fredy." data-salon="119" class="materia informatica">
-              <h5>Informática</h5>
-              <span class="hora">10:40am - 12:10pm</span>
-            </div>
-            <div data-hora="12:10 - 12:40pm" class="descanso">
-              <h5>Descanso</h5>
-              <span class="hora">12:10 - 12:40pm</span>
-            </div>
-            <div data-hora="12:40 - 2:20pm" data-profesor="Edisson." data-salon="206" class="materia logica_filosofica">
-              <h5>Lógica Filosófica</h5>
-              <span class="hora">12:40 - 2:20pm</span>
-            </div>
-          </section>
-          <section class="dia">
-            <h4>V</h4>
-            <div data-hora="6:30 - 8:20am" data-profesor="Alexanndra V." data-salon="205" class="materia quimica">
-              <h5>Química</h5>
-              <span class="hora">6:30 - 8:20am</span>
-            </div>
-            <div data-hora="8:20 - 10:10am" data-profesor="Alix M." data-salon="206" class="materia fisica">
-              <h5>Física</h5>
-              <span class="hora">8:20 - 10:10am</span>
-            </div>
-            <div data-hora="10:10 - 10:40am" class="descanso">
-              <h5>Descanso</h5>
-              <span class="hora">10:10 - 10:40am</span>
-            </div>
-            <div data-hora="10:40am - 12:10pm" data-profesor="Hammes." data-salon="103" class="materia laboratorio_ciencias">
-              <h5>Laboratorio Ciencias</h5>
-              <span class="hora">10:40am - 12:10pm</span>
-            </div>
-            <div data-hora="12:10 - 12:40pm" class="descanso">
-              <h5>Descanso</h5>
-              <span class="hora">12:10 - 12:40pm</span>
-            </div>
-            <div data-hora="12:40 - 2:20pm" data-profesor="John Jairo." data-salon="205" class="materia logica_matematica">
-              <h5>Lógica Matemática</h5>
-              <span class="hora">12:40 - 2:20pm</span>
-            </div>
-          </section>
-        </section>
+        <section class="semana_1" id="Semana_1"></section>
       </section>
       <section class="semana">
         <h2>SEMANA 2</h2>
-        <section class="semana_2">
-          <section class="dia">
-            <h4>L</h4>
-            <div data-hora="6:30 - 8:20am" data-profesor="Sandra F." data-salon="115" class="materia castellano">
-              <h5>Castellano</h5>
-              <span class="hora">6:30 - 8:20am</span>
-            </div>
-            <div data-hora="8:20 - 10:10am" data-profesor="Sandra Ch." data-salon="201" class="materia sociales">
-              <h5>Sociales</h5>
-              <span class="hora">8:20 - 10:10am</span>
-            </div>
-            <div data-hora="10:10 - 10:40am" class="descanso">
-              <h5>Descanso</h5>
-              <span class="hora">10:10 - 10:40am</span>
-            </div>
-            <div data-hora="10:40am - 12:10pm" data-profesor="Alexanndra V." data-salon="205" class="materia quimica">
-              <h5>Química</h5>
-              <span class="hora">10:40am - 12:10pm</span>
-            </div>
-            <div data-hora="12:10 - 12:40pm" class="descanso">
-              <h5>Descanso</h5>
-              <span class="hora">12:10 - 12:40pm</span>
-            </div>
-            <div data-hora="12:40 - 2:20pm" data-profesor="Martha Paola." data-salon="Patio 3" class="materia educacion_fisica">
-              <h5>Educación Física</h5>
-              <span class="hora">12:40 - 2:20pm</span>
-            </div>
-          </section>
-          <section class="dia">
-            <h4>M</h4>
-            <div data-hora="6:30 - 8:20am" data-profesor="Roberto S." data-salon="204" class="materia etica_y_religion">
-              <h5>Ética y Religión</h5>
-              <span class="hora">6:30 - 8:20am</span>
-            </div>
-            <div data-hora="8:20 - 10:10am" data-profesor="Edisson." data-salon="206" class="materia logica_filosofica">
-              <h5>Lógica Filosófica</h5>
-              <span class="hora">8:20 - 10:10am</span>
-            </div>
-            <div data-hora="10:10 - 10:40am" class="descanso">
-              <h5>Descanso</h5>
-              <span class="hora">10:10 - 10:40am</span>
-            </div>
-            <div data-hora="10:40am - 12:10pm" data-profesor="Donaldo F." data-salon="203" class="materia matematicas">
-              <h5>Matemáticas</h5>
-              <span class="hora">10:40am - 12:10pm</span>
-            </div>
-            <div data-hora="12:10 - 12:40pm" class="descanso">
-              <h5>Descanso</h5>
-              <span class="hora">12:10 - 12:40pm</span>
-            </div>
-            <div data-hora="12:40 - 2:20pm" data-profesor="Sandra F." data-salon="121" class="materia castellano">
-              <h5>Castellano</h5>
-              <span class="hora">12:40 - 2:20pm</span>
-            </div>
-          </section>
-          <section class="dia">
-            <h4>M</h4>
-            <div data-hora="6:30 - 8:20am" data-profesor="Sandra Ch." data-salon="201" class="materia sociales">
-              <h5>Sociales</h5>
-              <span class="hora">6:30 - 8:20am</span>
-            </div>
-            <div data-hora="8:20 - 10:10am" data-profesor="Donaldo F." data-salon="203" class="materia matematicas">
-              <h5>Matemáticas</h5>
-              <span class="hora">8:20 - 10:10am</span>
-            </div>
-            <div data-hora="10:10 - 10:40am" class="descanso">
-              <h5>Descanso</h5>
-              <span class="hora">10:10 - 10:40am</span>
-            </div>
-            <div data-hora="10:40am - 12:10pm" data-profesor="Roberto S." data-salon="204" class="materia etica_y_religion">
-              <h5>Ética y Religión</h5>
-              <span class="hora">10:40am - 12:10pm</span>
-            </div>
-            <div data-hora="12:10 - 12:40pm" class="descanso">
-              <h5>Descanso</h5>
-              <span class="hora">12:10 - 12:40pm</span>
-            </div>
-            <div data-hora="12:40 - 2:20pm" data-profesor="Stefany." data-salon="202" class="materia ingles">
-              <h5>Inglés</h5>
-              <span class="hora">12:40 - 2:20pm</span>
-            </div>
-          </section>
-          <section class="dia">
-            <h4>J</h4>
-            <div data-hora="6:30 - 8:20am" data-profesor="Emilce M." data-salon="99" class="materia ingles_tecnico">
-              <h5>Inglés Técnico</h5>
-              <span class="hora">6:30 - 8:20am</span>
-            </div>
-            <div data-hora="8:20 - 10:10am" data-profesor="Andres G." data-salon="108" class="materia artes">
-              <h5>Artes</h5>
-              <span class="hora">8:20 - 10:10am</span>
-            </div>
-            <div data-hora="10:10 - 10:40am" class="descanso">
-              <h5>Descanso</h5>
-              <span class="hora">10:10 - 10:40am</span>
-            </div>
-            <div data-hora="10:40am - 12:10pm" data-profesor="Hammes." data-salon="212" class="materia ciencias_naturales">
-              <h5>Ciencias Naturales</h5>
-              <span class="hora">10:40am - 12:10pm</span>
-            </div>
-            <div data-hora="12:10 - 12:40pm" class="descanso">
-              <h5>Descanso</h5>
-              <span class="hora">12:10 - 12:40pm</span>
-            </div>
-            <div data-hora="12:40 - 2:20pm" data-profesor="Stefany." data-salon="112" class="materia laboratorio_ingles">
-              <h5>Laboratorio Inglés</h5>
-              <span class="hora">12:40 - 2:20pm</span>
-            </div>
-          </section>
-          <section class="dia">
-            <h4>V</h4>
-            <div data-hora="6:30 - 8:20am" data-profesor="Sandra F." data-salon="105" class="materia castellano">
-              <h5>Castellano</h5>
-              <span class="hora">6:30 - 8:20am</span>
-            </div>
-            <div data-hora="8:20 - 10:10am" data-profesor="Sandra Ch." data-salon="201" class="materia sociales">
-              <h5>Sociales</h5>
-              <span class="hora">8:20 - 10:10am</span>
-            </div>
-            <div data-hora="10:10 - 10:40am" class="descanso">
-              <h5>Descanso</h5>
-              <span class="hora">10:10 - 10:40am</span>
-            </div>
-            <div data-hora="10:40am - 12:10pm" data-profesor="Hammes." data-salon="201" class="materia ciencias_naturales">
-              <h5>Ciencias Naturales</h5>
-              <span class="hora">10:40am - 12:10pm</span>
-            </div>
-            <div data-hora="12:10 - 12:40pm" class="descanso">
-              <h5>Descanso</h5>
-              <span class="hora">12:10 - 12:40pm</span>
-            </div>
-            <div data-hora="12:40 - 2:20pm" data-profesor="Martha Paola." data-salon="Patio 3" class="materia educacion_fisica">
-              <h5>Educación Física</h5>
-              <span class="hora">12:40 - 2:20pm</span>
-            </div>
-          </section>
-        </section>
+        <section class="semana_2" id="Semana_2"></section>
       </section>
     </main>
   </body>
