--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Horario 903</title>
+    <link rel="shortcut icon" href="img/calendario.png" type="image/x-icon" />
     <link rel="stylesheet" href="css/style.css" />
     <script defer src="materias.js"></script>
     <script defer src="script.js"></script>
